# TuGraph-AntGraphLearning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.sh  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  document.md  feature_request.md
.github/workflows/: cloud_code_scan.yml  codeql-analysis.yml  unit_testing.yml
STGNN/: graph.conf  stgnn.py
agl/: __init__.py
agl/cpp/: CMakeLists.txt
agl/cpp/common/: base64.cc  base64.h  safe_check.cc  safe_check.h  thread_pool.cc  thread_pool.h  uncompress.h
agl/cpp/graph/: create_from_pbs.cc  edge_unit.cc  edge_unit.h  node_unit.cc  node_unit.h  sub_graph.cc  sub_graph.h  unit_graph.cc  unit_graph.h
agl/cpp/graph/base_data_structure/: coo.h  csr.h  dtype.cc  dtype.h  frame.cc  frame.h  nd_array.h
agl/cpp/graph/features/: dense_feature_array.h  feature_array.h  sparsek_feature_array.h  sparsekv_feature_array.h
agl/cpp/graph/internal/: feature_filler.cc  feature_filler.h  feature_initer.cc  feature_initer.h  non_merge_container.cc  non_merge_container.h
agl/cpp/graph/spec/: feature_spec.cc  feature_spec.h  unit_spec.cc  unit_spec.h
agl/cpp/py_api/: pybind11_api.cc  pybind11_my_code.cc  pybind11_wrapper.cc  tst.py  zdl_test_data.txt
agl/cpp/py_api/tools/: mutli_dense_parser.cc  mutli_dense_parser.h
agl/java/: README.md  pom.xml
agl/java/docs/: 1，安装.md  2，数据准备.md  3，快速开始.md  4，邻居属性索引.md  5，邻居属性索引.md  5，邻居过滤条件.md  6，邻居采样.md  7，属性索引和采样的应用.md  8，样本表格式说明.md  8，样本表说明.md  9，进阶教程总览.md  快速开始.md  数据准备.md  邻居属性索引.md
agl/java/proto/: sample.proto
agl/proto/: CMakeLists.txt  graph_feature.proto  sample.proto  src_gen.sh
agl/python/conv/: gcn_conv.py
agl/python/core/: gas_conv.py
agl/python/data/: agl_dtype.py  collate.py  collate_test.py  column.py  column_test.py  dataset.py  dataset_collate_test.py  dataset_test.py  multi_graph_feature_collate.py  reader_util.py
agl/python/data/subgraph/: pyg_inputs.py  subgraph.py  subgraph_test.py
agl/python/data/subgraph/test_data/: data1.txt  data1_content.txt  data2.txt  data2_json_content.txt  data3.txt
agl/python/dataset/: dataset_collate_test.py  dataset_test.py  iterable_dataset.py  map_based_dataset.py  reader_util.py
agl/python/encoder/: geniepath.py  stgnn.py
agl/python/examples/: run_spark.py  run_spark_template.sh
agl/python/examples/drgst/: README.md  drgst_citeseer.py
agl/python/examples/drgst/data_process/: data_process.py  submit.sh
agl/python/examples/geniepath_ppi/: ReadMe.md  geniepath_ego.py  geniepath_subgraph_adj.py  geniepath_subgraph_ego.py  iterable_ppi_geniepath.py  mapdataset_geniepath_subgraph_adj.py  new_model_geniepath_subgraph.py  train_geniepath_ppi.py
agl/python/examples/geniepath_ppi/data_process/: data_prepare.py  normalize.py  split_graph_features.py  submit.sh
agl/python/examples/hegnn_acm/: ReadMe.md  model_hegnn.py
agl/python/examples/hegnn_acm/data_process/: merge_metapath.py  submit.sh
agl/python/examples/kcan_movielens/: README.md  kcan_subgraph_adj.py  readme.md
agl/python/examples/kcan_movielens/data_process/: split_graph_features.py  submit.sh
agl/python/examples/lagcl_demo/: README.md  lagcl_full_batch.py  metrics.py
agl/python/examples/lagcl_demo/data_process/: process_for_agl.py  submit.sh
agl/python/examples/merit/: README.md  main.py  merit.py  tgat.py  utils.py
agl/python/examples/merit/data_process/: data_prepare.py  gen_train_data.py  gen_train_data2.py  process.py  run_full_gf.sh  run_train_gf.sh  (+1 more)
agl/python/examples/nasa/: README.md  nasa.py
agl/python/examples/pagnn/: README.md  ReadMe.md  pagnn_facebook.py
agl/python/examples/ssr_lastfm/: README.md  data_preprcoss.py  feature_propagation.sh  readme.md  ssr2_ego.py  ssr2_ego_eval.py  ssr_ego.py  ssr_ego_infer.py
agl/python/model/encoder/: base.py  drgst.py  geniepath_encoder.py  hegnn_encoder.py  kcan.py  lagcl_encoder.py  merit_encoder.py  pagnn_encoder.py  ssr.py  tgat_encoder.py
agl/python/model/layer/: geniepath_layer.py  initial_embedding_layer.py  kcan_layer.py  linear.py  ssr_layer.py
agl/python/model/utils/: loss_utils.py  merit_utils.py  nasa_utils.py  sparse_mat_interface.py  spmm_utils.py
agl/python/proto/: graph_feature_pb2.py
agl/python/subgraph/: numpy_inputs.py  pyg_inputs.py  subgraph.py  subgraph_test.py  tuke_test.py  xuanruo.py  zejun_test.py
cmake/: protobuf.cmake  pybind11.cmake  submodule.cmake
doc/: build.sh  conf.py  exclude.py  index.rst  indices_tables.rst
doc/core/: contribution.md  graph_learning_tutorial.md  install.md  learning_step1_read_data.md  learning_step2_parse_data.md  learning_step3_model.md  process_description.md
doc/core/Chinese/: contribution.md  graph_learning_tutorial.md  install.md  learning_step1_read_data.md  learning_step2_parse_data.md  learning_step3_model.md  process_description.md
doc/core/Chinese/sampler/: 1_demo_of_subgraph_sampling.md  2_neighbor_filtering_condition.md  3_neighbor_attribute_indexing.md  5_demo_of_indexing_sampling_on_attributes.md  6_advanced_tutorial_overview.md
doc/core/English/: contribution_EN.md  graph_learning_tutorial_EN.md  install_EN.md  learning_step1_read_data_EN.md  learning_step2_parse_data_EN.md  learning_step3_model_EN.md  process_description_EN.md
doc/core/English/sampler/: 0_data_preparation_EN.md  1_demo_of_subgraph_sampling_EN.md  2_neighbor_filtering_condition_EN.md  3_neighbor_attribute_indexing_EN.md  4_neighbor_sampling_EN.md  5_demo_of_indexing_sampling_on_attributes_EN.md  6_advanced_tutorial_overview_EN.md
doc/core/sampler/: 0_data_preparation.md  1_demo_of_subgraph_sampling.md  4_neighbor_sampling.md  5_demo_of_indexing_sampling_on_attributes.md
docker/: Dockerfile.gpu  build_gpu_image.sh  pip.conf  start_docker.sh  start_docker_with_image.sh  start_gpu_torch_docker.sh  start_torch_docker.sh
script/: cpp_build.sh  cpp_ut.sh  python_build.sh  python_install.sh  python_ut.sh
test/: CMakeLists.txt
test/common/: safe_check_test.cc  thread_pool_test.cc
test/graph/: frame_test.cc  ndarray_test.cc  parse_pb_test.cc
tools/: graph_feature_gen.py
(+156 files in other folders)
